fix: removed unused code

--- a/src/components/Image/style.css
+++ b/src/components/Image/style.css
@@ -5,9 +5,9 @@
 
 .dialog {
   box-shadow: 0 8px 6px -6px black;
-  position: static;
-  left: 20%;
-  top: 10%;
+  top: 20%;
+  position: "absolute";
+  z-index: 2
 }
 
 .image {
